Add gpio driver, and .gitignore file.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "makefile.extensionOutputFolder": "./.vscode"
+    "makefile.extensionOutputFolder": "./.vscode",
+    "files.associations": {
+        "*.dtsi": "c",
+        "pi3bplus.h": "c"
+    }
 }
