--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,7 @@
     "files.associations": {
         "*.dtsi": "c",
         "pi3bplus.h": "c"
-    }
+    },
+    "cortex-debug.registerUseNaturalFormat": false,
+    "cortex-debug.variableUseNaturalFormat": true
 }
